# BattDiag

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  demo.ipynb  sample_data.csv
src/battdiag/: __init__.py  cellEval.py  crossCellEval.py
tests/: test_functional.py  test_refactor.py
