[project]
name = "battdiag"
version = "0.1.0"
description = "Battery diagnostics functions to calculate fault signals based on the voltage in serial connected multi-cell battery modules."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Jacob Klink", email = "jacob.klink@tu-clausthal.de" }
]
requires-python = ">=3.12"
dependencies = [
    "numba>=0.63.1",
    "numpy>=2.2.5",
    "pynomaly>=0.3.4",
    "scikit-learn>=1.4.1",
]


[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "coverage>=7.13.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
refactor = [
    # EvalModupy is a local package for comparison tests only
    # Install manually if needed: uv pip install -e ../EvalSimulation
]
